single plant activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,9 @@
     </string-array>
     <string name="plant_add_profile_picture">Add profile picture</string>
 
-//Mainactivity
+    //Mainactivity
     <string name="all_my_plants">My Plants</string>
+
+    //Single plant
+    <string name="single_add_picture">Add more pictures</string>
 </resources>
