--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="cancel">Cancel</string>
+    <string name="channel_name">myChannel</string>
+    <string name="channel_description">My plants channel</string>
 
     //Login Activity
     <string name="login_email">Email Address</string>
