--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="cancel">Cancel</string>
     <string name="channel_name">myChannel</string>
     <string name="channel_description">My plants channel</string>
+    <string name="search_hint">search for plants</string>
 
     //Login Activity
     <string name="login_email">Email Address</string>
