--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,8 @@
     <string name="frost_expected">Please check the weather forecast some frost is expected at </string>
     <string name="wind_expected">Please check the weather forecast heavy wind is expected at </string>
     <string name="weather_alert">Weather alert</string>
+
+
+    //ImageDialog
+    <string name="delete_picture">Delete picture</string>
 </resources>
