--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">MyPlants</string>
     <string name="splash_app_name">My Plants</string>
-    <string name="add_plant_activity_name">Add Plants</string>
+    <string name="add_plant_activity_name">Add Plant</string>
     <string name="user_menu_settings">Settings</string>
     <string name="user_menu_logout">Logout</string>
     <string name="submit_button">Submit</string>
@@ -106,6 +106,8 @@
     <string name="current_wind_speed">Wind speed</string>
     <string name="celsius">%1$s °C</string>
     <string name="kmh">%1$s km/h</string>
+    <string name="weather_forecast_content_desc">weather icon</string>
+    <string name="weather_icon_url">http://openweathermap.org/img/wn/%1$s@2x.png</string>
 
     <string name="tomorrow_forecast">Tomorrow\'s forecast</string>
     <string name="tomorrow_temperature">Average temperature</string>
@@ -114,7 +116,7 @@
     <string name="tomorrow_wind_speed">Wind speed</string>
 
     //Notifications
-    <string name="frost_expected">Please check the weather forecast some frost is expected at </string>
+    <string name="frost_expected">Please check the weather forecast cold weather is expected at </string>
     <string name="wind_expected">Please check the weather forecast heavy wind is expected at </string>
     <string name="weather_alert">Weather alert</string>
 
